fix: overflow burger

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,4 @@
 .App {
-  overflow: hidden;
   &__progress-bar-wrapper {
     background: none;
     height: 7px;
