--- a/src/Components/Contact/contact.scss
+++ b/src/Components/Contact/contact.scss
@@ -15,6 +15,7 @@
       rgba(227, 27, 109, 0.5) 90.71%
     );
   box-shadow: inset 0 0 10px #000000;
+  overflow: hidden;
   &__title-container {
     display: flex;
     flex-direction: column;
