--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -140,3 +140,7 @@
     }
   }
 }
+
+#home {
+  overflow: hidden;
+}
